k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challengr-backend
  namespace: student-it220257
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challengr-backend
  template:
    metadata:
      labels:
        app: challengr-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/htl-leo-itp-25-27-4-5bhitm/challengr-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: challengr-backend-service
  namespace: student-it220257
spec:
  selector:
    app: challengr-backend
  ports:
    - port: 8080
      targetPort: 8080
