k8s/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challengr-dashboard
  namespace: student-it220257
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challengr-dashboard
  template:
    metadata:
      labels:
        app: challengr-dashboard
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: dashboard
          image: ghcr.io/htl-leo-itp-25-27-4-5bhitm/challengr-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: challengr-dashboard-service
  namespace: student-it220257
spec:
  selector:
    app: challengr-dashboard
  ports:
    - port: 80
      targetPort: 4000
