k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challengr-frontend
  labels:
    app: challengr-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challengr-frontend
  template:
    metadata:
      labels:
        app: challengr-frontend
    spec:
      containers:
        - name: challengr-frontend
          image: ghcr.io/basti010203/challengr-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: challengr-frontend
spec:
  selector:
    app: challengr-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
