k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challengr-keycloak
  namespace: student-it220257
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challengr-keycloak
  template:
    metadata:
      labels:
        app: challengr-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0
          args: ["start-dev"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: theme-properties
              mountPath: /opt/keycloak/themes/challengr/login/theme.properties
              subPath: theme.properties
            - name: theme-css
              mountPath: /opt/keycloak/themes/challengr/login/resources/css/styles.css
              subPath: styles.css
            - name: theme-messages
              mountPath: /opt/keycloak/themes/challengr/login/resources/messages/messages_de.properties
              subPath: messages_de.properties
      volumes:
        - name: theme-properties
          configMap:
            name: challengr-theme-properties
        - name: theme-css
          configMap:
            name: challengr-theme-css
        - name: theme-messages
          configMap:
            name: challengr-theme-messages
---
apiVersion: v1
kind: Service
metadata:
  name: challengr-keycloak-service
  namespace: student-it220257
spec:
  selector:
    app: challengr-keycloak
  ports:
    - port: 8080
      targetPort: 8080
