k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challengr-webapp
  namespace: student-it220257
spec:
  replicas: 1
  selector:
    matchLabels:
      app: challengr-webapp
  template:
    metadata:
      labels:
        app: challengr-webapp
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: webapp
          image: ghcr.io/htl-leo-itp-25-27-4-5bhitm/challengr-webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: challengr-webapp-service
  namespace: student-it220257
spec:
  selector:
    app: challengr-webapp
  ports:
    - port: 80
      targetPort: 80
