k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challengr-ingress
  namespace: student-it220257
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: it220257.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: challengr-keycloak-service
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: challengr-backend-service
                port:
                  number: 8080
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: challengr-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: challengr-dashboard-service
                port:
                  number: 80
